{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 112,
  "lineage": "9c11abfe-a938-56dc-740d-f9971a56d047",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0752b2703768afc3b",
            "domain": "vpc",
            "id": "eipalloc-0169efaf294d8b333",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09a50e8d3dc823cbb",
            "private_dns": "ip-10-0-1-159.ec2.internal",
            "private_ip": "10.0.1.159",
            "public_dns": "ec2-44-197-2-62.compute-1.amazonaws.com",
            "public_ip": "44.197.2.62",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "my_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:589076428231:loadbalancer/my-elb-terraform",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "my-elb-terraform-979270939.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-elb-terraform",
            "idle_timeout": 400,
            "instances": [
              "i-0dc0cdd2c025ceac7",
              "i-0e91531933ffe1fa4"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "my-elb-terraform",
            "security_groups": [
              "sg-072c69751b7c2cb52"
            ],
            "source_security_group": "589076428231/my_sg",
            "source_security_group_id": "sg-072c69751b7c2cb52",
            "subnets": [
              "subnet-000cef87334b24b1e",
              "subnet-0734f657a09d494a1"
            ],
            "tags": {
              "Name": "my-terraform-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.pri_ins",
            "aws_instance.pub_ins",
            "aws_security_group.my_sg",
            "aws_subnet.pri_sub",
            "aws_subnet.pub_sub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pri_ins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:589076428231:instance/i-0e91531933ffe1fa4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e91531933ffe1fa4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demokepair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02740da6fc581de95",
            "private_dns": "ip-10-0-2-140.ec2.internal",
            "private_ip": "10.0.2.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-025a8f3ceae74ea5a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0734f657a09d494a1",
            "tags": {
              "Name": "my_private_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-072c69751b7c2cb52"
            ]
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "aws_subnet.pri_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub_ins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:589076428231:instance/i-0dc0cdd2c025ceac7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc0cdd2c025ceac7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demokepair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06c5aa543c9f48c71",
            "private_dns": "ip-10-0-1-131.ec2.internal",
            "private_ip": "10.0.1.131",
            "public_ip": "100.26.184.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d31bc247e462a8ea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000cef87334b24b1e",
            "tags": {
              "Name": "my_public_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-072c69751b7c2cb52"
            ]
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "aws_subnet.pub_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589076428231:internet-gateway/igw-04cd960cf1e7a901c",
            "id": "igw-04cd960cf1e7a901c",
            "owner_id": "589076428231",
            "tags": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-0752d5f61394679ec"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0169efaf294d8b333",
            "id": "nat-07acab2b50bea4b3c",
            "network_interface_id": "eni-09a50e8d3dc823cbb",
            "private_ip": "10.0.1.159",
            "public_ip": "44.197.2.62",
            "subnet_id": "subnet-000cef87334b24b1e",
            "tags": {
              "Name": "gw-NAT"
            }
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_subnet.pub_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589076428231:route-table/rtb-0f0afe75af05093df",
            "id": "rtb-0f0afe75af05093df",
            "owner_id": "589076428231",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07acab2b50bea4b3c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-private-route"
            },
            "vpc_id": "vpc-0752d5f61394679ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.gw",
            "aws_subnet.pub_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589076428231:route-table/rtb-0fe7c50a5d9c7e2ca",
            "id": "rtb-0fe7c50a5d9c7e2ca",
            "owner_id": "589076428231",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04cd960cf1e7a901c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-route"
            },
            "vpc_id": "vpc-0752d5f61394679ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02be9d0d417d00f8f",
            "route_table_id": "rtb-0f0afe75af05093df",
            "subnet_id": "subnet-0734f657a09d494a1"
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.gw",
            "aws_route_table.pri_route",
            "aws_subnet.pri_sub",
            "aws_subnet.pub_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c48ea417ceebc7fc",
            "route_table_id": "rtb-0fe7c50a5d9c7e2ca",
            "subnet_id": "subnet-000cef87334b24b1e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_route",
            "aws_subnet.pub_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589076428231:security-group/sg-072c69751b7c2cb52",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072c69751b7c2cb52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my_sg",
            "name_prefix": "",
            "owner_id": "589076428231",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0752d5f61394679ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589076428231:subnet/subnet-0734f657a09d494a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0734f657a09d494a1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589076428231",
            "tags": {
              "Name": "Private-subnet-01"
            },
            "tags_all": {
              "Name": "Private-subnet-01"
            },
            "vpc_id": "vpc-0752d5f61394679ec"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589076428231:subnet/subnet-000cef87334b24b1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-000cef87334b24b1e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589076428231",
            "tags": {
              "Name": "Pubic-subnet-01"
            },
            "tags_all": {
              "Name": "Pubic-subnet-01"
            },
            "vpc_id": "vpc-0752d5f61394679ec"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589076428231:vpc/vpc-0752d5f61394679ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac2629b12bcfd9c8",
            "default_route_table_id": "rtb-0c38c0b15f15845a5",
            "default_security_group_id": "sg-0926df363b21cbde8",
            "dhcp_options_id": "dopt-44f4d73e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0752d5f61394679ec",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c38c0b15f15845a5",
            "owner_id": "589076428231",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}